refactor: 기상청 표준 좌표 변환 공식으로 개선